assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Langar&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Amaranth&display=swap');
/* root css variables */
:root{
    --clr-modal-background:#0a0a0a;
    --clr-text-:#ffffff;
    --clr-modal-buttons: #ffa500;
    --clr-target:#ff0000;
    --clr-404-btn:#008000;
    --clr-btn-background:#3b3939;
    --clr-black:black;

}

*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}
html{
   
    height: -webkit-fill-available;
   
}

body{
    
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    background:#b0a3a3 no-repeat center/cover url(../images/game-stage-big-ashok-chakravarthi-unsplash.jpg);
    position: relative;
    background-color: #0a0a0a;
    overflow-x: hidden;
    height: 100vh;
    min-height: 100vh;
    min-height: -webkit-fill-available;
    font-family: 'Amaranth',sans-serif;
   
    
   
}

h1{
    color: var(--clr-text-);
    text-align: center;
    padding-top: 10px;
    width: 100vw;
    font-weight: 800;
    text-transform: uppercase;
    background-color: #3b3939;

}

header{
    background-color: #3b3939;
    display: flex;
    justify-content: space-between;
    align-items: center; 
    height: 2rem;
    color:var(--clr-text-);
    font-size: 1.2rem;
    padding: 10px 2% 0 2%;
    width: 100%;

}

.hit-detection{
    color: #1fec1f;
    font-weight: 900;
    display: none;
}

#game-field{
    width: 100vw;
    height: 90vh;
    position: relative;
    z-index: 5;
    border: 2px solid var(--clr-modal-background) ;  

}

/* add image to custom cursor */
.cursor{
    width: 15px;
    height: 15px;
    font-weight: 900;
    background-blend-mode: color-burn;
    background:no-repeat center/cover url(../images/crosshair-2.jpg) ;
    border-radius: 50%;
    position: absolute;
    transform: translate(-50%,-50%);
    pointer-events: none;
    z-index: 20;
    display: none;
}

/* add image to click position on screen */
#holeImg{
    width: 25px;
    height: 25px;
    background: no-repeat center/cover url(../images/bullet-hole.webp);
    position: absolute;
    display: none;

}

#target-guitar{
    height: 50px;
    width: 30px;
    position: absolute;
   
}

.guitar{
    border:2px solid var(--clr-target);
}

footer{
    width: 40%;
    display: flex;
    justify-content: space-around;
    background-color: #3b3939;
}

footer a{
    text-decoration: none;
    color: white;
    font-size: 1.5rem;
    
}

footer a:hover{
    color:green;
}

#git-dummy{
    display: none;
}

/*--------------------------modal screen styles------------------------------*/

.modal{
    border: .3px inset white;
    background-color:var(--clr-black);
    padding: 2%;
    width: 85vw;
    height: 80vh;
    padding: 2%;
    position: absolute;
    border-radius: 2%;
    display: flex;
    flex-direction: column;
    align-items: center;
    left: 0;
    right: 0;
    top: 5px;
    margin: auto; 
    z-index: 20;
    overflow-y: visible;

}

.modal-button{
    font-size: 1.5rem;
    padding: 10px 25px;
    width: 130px;
    font-weight: 600;
    border-radius: 5px;
    background-color:var(--clr-modal-buttons);
}

.screen-titles{
    text-align: center;
    font-size: 2rem;
    color: var(--clr-text-);
}

.screen-description{
    font-size: 1.5rem;
    color: var(--clr-text-);
    padding: 3%;


}

.welcome-screen{
    display: flex;
    flex-direction: column;
    align-items: center;
    background:center/cover url(../images/welcome_guitar-maxime-favier-unsplash.webp);
    background-blend-mode: overlay;
    justify-content: center;
    gap: 5%;
        
  
}

#welcome-screen{
    z-index: 30;
    height: 80vh;
}

#start-game-modal{
    justify-content: center;
    height: 80vh;
     
}

#target-img{
    height: 160px;
    width: 100px;
    float: left;
    margin: 5px;
     
}

.hide{
    display: none;
}

.game-over{
    background-color:var(--clr-modal-background);
    height: 70vh;
    width: 85vw;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-around;
    position: absolute;
    padding: 2%; 
    border-radius: 2%;
    left: 0;
    right: 0;
    top: 0;
    margin: auto; 
    z-index: 20;
    display: none;
    

}

#game-over >button{
    width: 80%;
}

#transition-screen{
    background-color: black;
    justify-content: center;
    gap: 15%;
    display: none;   
    height: 520px;
   
   
}

#play-quiz{
    width:80% ;
}

/*--------------------------404 page styles------------------------------*/

#container404{
    background-color: black;
    width: 100vw;
    height: 100vh;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
    position: fixed;

}

.title404{
    font-size: 1.8rem;
    background: transparent;
    font-family: 'Langar',Arial, Helvetica, sans-serif;
}

#subtitle404{
    color: var(--clr-modal-buttons);
    font-size: 7rem;
    font-weight: 900;
    margin-bottom: 0;
    font-family: 'Langar',Arial, Helvetica, sans-serif;
    
}

#btn404{
    width: 180px;
    text-align: center;
    text-decoration: none;
    font-size: 1rem;
    padding: 5px 10px;
    background-color:var(--clr-404-btn);
    color: var(--clr-text-);
    border-radius: 5px;
    border: 1px solid var(--clr-text-);
    

}

#footer404{
    flex-direction: column;
    justify-content: space-between;
    width: 75%;
    background-color: var(--clr-black);
    
    
}

#footer404,
 .social-media{
    display: flex;
    align-items: center;
    
}

.social-media{
    width: 100%;
    justify-content: space-between;
    padding: 10px;
}

.author{
    width: 100%;
    padding: 10px;
    text-align: center;
    color: var(--clr-text-);
  

}

/*--------------------------quiz game styles------------------------------*/
html{
    height:100vh;
}

#body{
    background: no-repeat center/cover url(../images/welcome_guitar-maxime-favier-unsplash.webp);
    cursor: pointer;
    height: 100vh;
}

.main{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
   
}

#quiz-stats{
    display: flex;
    justify-content: space-around;
    align-items: center;
    width: 100vw;
}

.current-score{
    color: var(--clr-text-);
    font-size: 1.25rem;
    font-weight: 800;
    background:linear-gradient(179deg, black, #120f0f);
}

#userScore{
    color: var(--clr-404-btn);
}

#question{
    color: var(--clr-text-);
    font-size: 1.25rem;
    text-align: center;
    margin: 20px 0 20px 0;
    background:linear-gradient(179deg, black, #120f0f);
}

#progressBar{
    width: 7rem;
    height: 1.3rem;
    border: 3px solid var(--clr-text-);
}

#progressBarFull{
    height: .9rem;
    background-color:var(--clr-404-btn);
    width: 0%;
    margin-top: .5px;
}

/* button container style */
.container{
    flex-direction: column;
    justify-content: center;
}

/* answer button style */
.answers,
.next-question{
    list-style-type: none;
    align-self: center;
    margin-top: 3%;

}

.answers:hover{
    color: white;
    transform: scale(1.03);
}

.btn{
    width: 65vw;
    font-size: 1rem;
    font-weight: 500;
    border: 1px solid var(--clr-text-);
 
}

.btn-group{
    margin-bottom: 15px;
}

.choice-text,
.next{
    background-color: var(--clr-btn-background);
    color: var(--clr-text-);
}

.next{
    display: none;
}

#footer-quiz{
    align-self: center;
    background: transparent;
}

/* bootstrap button  classes */


/* show element class */
.show{
    display: block;
}

.wrong{
    border: 2px solid var(--clr-target);
}

.correct{
    border: 2px dotted var(--clr-404-btn);
    background-color:var(--clr-404-btn) ;
}

/* remove bootstrap blue outline for buttons */
.btn:focus {
    outline: none;
    box-shadow: none;
    color: white;
  }



/*--------------------------thank you form styles------------------------------*/

#thank-you{
    background:center center/cover no-repeat url(../images/thank-you2-jeremy-allouche-unsplash.webp);
    background-color: var(--clr-black);
    max-width: 800px;   
    
}

.thank-you{
    display: none;
}

h3,h4{
    text-align:center ; 
    color:var(--clr-text-);
    background: linear-gradient(45deg, black, transparent);
}

label{
    color: var(--clr-text-);
    background:linear-gradient(230deg, black, #0000009c); ;
}

.contact-btn{
    display: flex;
    justify-content: space-between;
    gap: 20px;
    margin-top: 15px;
    background: linear-gradient(12deg, black, transparent);
}

.btn-success{
    width: 40%;
    padding: 5px;
    background-color:var(--clr-404-btn);
    font-weight: 700;
}

#again{
    width: 40%;
    background-color: var(--clr-btn-background);
    color: var(--clr-text-);
}

 #again:hover{
  transform: scale(1.1);
}

.btn-success:hover{
    transform: scale(1.1);
}

#footer-form{
    width: 80%;
    display: flex;
    align-items: center;
    justify-content:center;
    gap: 20px;
    margin: auto;
    background-color: transparent;

}

#final-score{
    color:var(--clr-404-btn);
}

.thnx-message{
    background-color: var(--clr-modal-background);
    border: 2px solid var(--clr-btn-background);
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
    max-width: 800px;
    height: 20vh;
    position: absolute;
    z-index: 2000;
    top: 17%;
    left: 50%;
    transform: translate(-50%, -50%);
  
    
}

#thnx-message{
    display:none;
}

h5{
    font-size: 2rem;
    color: var(--clr-text-);
    
}


/*--------------------------media queries------------------------------*/

@media screen and (min-width:480px){

    .screen-description{
        font-size:1.8rem ;
    }
    .screen-titles{
        font-size: 2.5rem;
    }
}

@media screen and (min-width:640px){
    .hit-detection{
        font-size: 2rem;
    }

    .screen-titles{
        font-size:2.8rem ;
    }

    .screen-description{
        font-size: 1.8rem;
    }

    .modal-button{
        font-size: 1.8rem;
        padding: 15px 30px;
        width: 200px;
    }

    #start-game-modal,
    #transition-screen,
    #welcome-screen{
        width: 400px;
        height: 640px;
    }

    .game-over{
        width: 400px;
    }

    /*           404 page media queries        */

    #subtitle404{
        font-size: 9rem;
    }

    .title404{
        font-size: 4.5rem;
    }

    #footer404{
        width: 50%;
    }

    #footer404 a{
        font-size: 2rem;
    }

    .author{
        font-size: 1.5rem;
    }

    #btn404{
        width: 240px;
        padding: 10px 15px;
        font-size: 1.5rem;
    } 
/* -----------quiz media queries---------- */
   #body{
    background: no-repeat center/cover url(../images/quiz-xl-maxime-favier-unsplash\ \(1\).webp);

    }

   #question{
    font-size: 2.25rem;
   }

   .current-score{
    font-size: 1.5rem;
   }

   .btn{
    font-size: 1.5rem;

   }


}

@media screen and (min-width:920px){
    .modal{
        width:45vw;
    }

    #start-game-modal,
    #transition-screen,
    #welcome-screen {
        width: 500px;
        
    }

    .game-over{
        width: 500px;
    }

    #target-guitar{
        height: 70px;
        width: 45px;
    }

} 

@media screen and (min-width:1200px){
    #target-guitar{
        height: 85px;
        width: 55px;
    }

}

